# ztk

./: .gitignore  .travis.yml  Makefile.am  README.md  ci  configure.ac  version.sh
re/: lease
src/: dealer.c  main.c  pub.c  pull.c  push.c  rep.c  req.c  router.c  sub.c  tap.c  zpub.c  zsub.c  ztk.c  ztk.h
t/: arg-validation  debug  delim  drouter  formats  invoke  lib  pipeline  pipeline.c  pubsub  reqrep  run  tap-relative  tap.pub-sub  tap.pull-push  tap.push-pull  tap.sub-pub  test.h  timeout  zpush  zpush.c
