#
#  Copyright 2015 James Hunt <james@jameshunt.us>
#
#  This file is part of ztk.
#
#  ztk is free software: you can redistribute it and/or modify it under
#  the terms of the GNU General Public License as published by the Free
#  Software Foundation, either version 3 of the License, or (at your
#  option) any later version.
#
#  ztk is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or
#  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
#  for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with ztk.  If not, see <http://www.gnu.org/licenses/>.
#

AC_PREREQ(2.68)

AC_INIT([ztk], [m4_esyscmd([./version.sh])], [bugs@niftylogic.com])

################################################

AC_CONFIG_SRCDIR([src/ztk.h])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIR([build])
AC_CONFIG_HEADERS(config.h)

################################################

AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

################################################

AX_TEST_COVERAGE

################################################

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

################################################

AC_CHECK_LIB(pthread,
	pthread_create,,
	AC_MSG_ERROR(Missing pthread library))

AC_CHECK_LIB(vigor,
	time_s,,
	AC_MSG_ERROR(Missing libvigor - see http://github.com/filefrog/libvigor))

AC_CHECK_LIB(sodium,
	crypto_box_keypair,,
	AC_MSG_ERROR(Missing sodium encryption library))

AC_HAVE_LIBRARY(zmq,,
	AC_MSG_ERROR(Missing 0MQ library))

################################################

AC_C_INLINE

################################################

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
